objects/Policy_Account_Role__c/fields/IsRunBatch__c.field-meta.xml
<CustomField>
    <fullName>IsRunBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To get the newly Inserted PAR in batch class CTP-54/57/63 PSI -39/42/48</description>
    <label>IsRunBatch</label>
    <type>Checkbox</type>
</CustomField>