objects/Policy_Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policyowner</fullName>
            </value>
            <value>
                <fullName>Basic Insured</fullName>
            </value>
            <value>
                <fullName>Other Insured</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Join Owner</fullName>
            </value>
            <value>
                <fullName>Claiment</fullName>
            </value>
            <value>
                <fullName>Controlling Person</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
                <isActive>false</isActive>
                <label>Beneficiary</label>
            </value>
            <value>
                <fullName>Contact Manager</fullName>
                <isActive>false</isActive>
                <label>Contact Manager</label>
            </value>
            <value>
                <fullName>Financial Manager</fullName>
                <isActive>false</isActive>
                <label>Financial Manager</label>
            </value>
            <value>
                <fullName>Marketing Assistant</fullName>
                <isActive>false</isActive>
                <label>Marketing Assistant</label>
            </value>
            <value>
                <fullName>Policy Agent</fullName>
                <isActive>false</isActive>
                <label>Policy Agent</label>
            </value>
            <value>
                <fullName>Policyholder</fullName>
                <isActive>false</isActive>
                <label>Policyholder</label>
            </value>
            <value>
                <fullName>Team Member</fullName>
                <isActive>false</isActive>
                <label>Team Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>